--- a/assets/css/justonething.css
+++ b/assets/css/justonething.css
@@ -397,6 +397,18 @@ label small {
     display: none;
   }
 }
+
+@media screen and (max-width: 1530px) {
+  .timeslots-wrapper.desk {
+   flex-flow: column; 
+  }
+
+  .timeslots-wrapper.desk .sum_div {
+    width: 100% !important;
+  }
+}
+
+
 @media screen and (min-width: 550px) and (max-width: 990px) {
 .header-mobile {
   height: 250px !important;
