--- a/assets/css/justonething.css
+++ b/assets/css/justonething.css
@@ -550,6 +550,14 @@ label small {
   color: lightgrey;
   margin: 0 0 50px 0;
   padding: 0;
+
+  margin-top: 120px;
+
+}
+
+.left-bg-desk {
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
 }
 
 #progressbar .active {
